# epifolio-notebooks

./: .gitignore  README.md  pyproject.toml  skills-lock.json
lib/: pyproject.toml
lib/src/epifolio/: __init__.py  color_utils.py  colors.py  data_utils.py  embedding.py  heatmap.py  higlass.py  higlass_utils.py  itcr_embedding_utils.py  metadata.py  nmf.py  scatter.py  sort_utils.py  tcga.py  upt_heatmap.py
lib/src/epifolio/assets/conf/: higlass_index_viewconf.json  nmf_strips.json  upt_pub_nmf_config.json
lib/src/epifolio/assets/data/: 0302_corces_submitter_metadata_expanded_v2.csv  adjusted.pca.sample.pq  confounded.pca.sample.pq  tcga.atac.pca.sample.pq  tcga_bulk_k16_H_proportions.npy  unified_clinical_metadata_data_dictionary_final.csv  unified_clinical_metadata_tcga_corces_unified_clinical_metadata_final.csv
lib/src/epifolio/assets/data/canonical/: tcga_atac_nmf_k24_H_proportions.csv  tcga_atac_nmf_k24_H_proportions.npy  tcga_atac_nmf_k24_metadata_sorted.csv  tcga_atac_nmf_k24_umap_coordinates.csv
lib/src/epifolio/assets/data/cn-aware-adjusted/: adjusted_nmf_k24_H_proportions.csv  adjusted_nmf_k24_H_proportions.npy  adjusted_nmf_k24_metadata_sorted.csv  adjusted_nmf_k24_umap_coordinates.csv
lib/src/epifolio/assets/data/cn-aware-unadjusted/: confounded_nmf_k24_H_proportions.csv  confounded_nmf_k24_H_proportions.npy  confounded_nmf_k24_metadata_sorted.csv  confounded_nmf_k24_umap_coordinates.csv
notebooks/: higlass_explorer.py  nmf_explorer.py  nmf_sample_explorer.py  pca_hiplot.py
notebooks/__marimo__/session/: higlass_explorer.py.json  (+2 more)
