[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epifolio"
version = "0.1.0"
description = "Shared utilities for TCGA cancer regulatory genomics notebooks"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3,<3",
    "pandas>=3.0.0",
    "pyarrow>=18.0.0",
    "plotly>=6.1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/epifolio"]
